# aoc-2025

./: CMakeLists.txt
.github/workflows/: aoc2025_ci.yml  build.yml
cmake/: catch2_helpers.cmake  helpers.cmake
in/: CMakeLists.txt
include/: disjoint_set.hpp  geometry.hpp  helper_macros.hpp  string_utils.hpp
src/: CMakeLists.txt  string_utils.cc
tests/: CMakeLists.txt  day1.cc  day2.cc  day3.cc  day4.cc  day5.cc  day6.cc  day7.cc  day8.cc  day9.cc
