include(catch2_helpers)
file(GLOB TEST_FILES ${PROJECT_TEST_DIR}/*.cc ${PROJECT_TEST_DIR}/*.cpp)
foreach(TEST_P ${TEST_FILES})
    cmake_path(GET TEST_P FILENAME filename)
    cmake_path(GET filename STEM exename)
    set_source_files_properties(TEST_P PROPERTIES LANGUAGE CXX)
    CompileTestFile(${exename} ${TEST_P})
    SetCXXVersion(${exename} cxx_std_20)
    IncludeHeaderFolderToSource(${exename} ${PROJECT_INCLUDE_DIR})
    target_link_libraries(${exename} PRIVATE ${aoc_src_lib})
endforeach()